RBA-139: Add id to ingredient product (#227)
* Add id to ingredient_product table

* Fix lint issues for rust projects

* Deprecate ingredient_product and use updated igredient table instead

* Rework ingredients tables and apply all changes to web-api

* Fix formating in web-api and rba-cli

* Rework web-app to use new data model for ingredients

* Fix lint in web-api

* Update ingredients in docs-app

* Replace order_number with slot_number
